--- a/Wimym.Backend/Views/Currencies/Edit.cshtml
+++ b/Wimym.Backend/Views/Currencies/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Wimym.Backend.Models.Currency
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Currency";
 }
 
-<h1>Edit</h1>
+ 
 
-<h4>Currency</h4>
+<h4>Edit Currency</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,16 +23,15 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
+           <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a class="btn btn-warning" asp-action="Index">Cancel</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+ 
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
