--- a/Wimym.Backend/Views/Currencies/Create.cshtml
+++ b/Wimym.Backend/Views/Currencies/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model Wimym.Backend.Models.Currency
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Currency Create";
 }
 
-<h1>Create</h1>
-
-<h4>Currency</h4>
+<h4>Currency Create</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,15 +21,14 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
+                <a class="btn btn-warning" asp-action="Index">Cancel</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+ 
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
