--- a/Wimym.Backend/Views/Currencies/Delete.cshtml
+++ b/Wimym.Backend/Views/Currencies/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Wimym.Backend.Models.Currency
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Currency";
 }
 
-<h1>Delete</h1>
+ 
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Currency</h4>
+    <h4>Currency Delete</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -27,7 +27,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="CurrencyId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> |       
+        <a class="btn btn-warning" asp-action="Index">Cancel</a>
     </form>
 </div>
