--- a/Wimym.Backend/Views/Currencies/Details.cshtml
+++ b/Wimym.Backend/Views/Currencies/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model Wimym.Backend.Models.Currency
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Details Currency";
 }
 
-<h1>Details</h1>
+ 
 
 <div>
-    <h4>Currency</h4>
+    <h4>Currency Details</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -25,6 +25,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.CurrencyId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-success" asp-action="Index">Back to List</a>
+    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model.CurrencyId">Edit</a> |
+
 </div>
