--- a/Wimym.Backend/Views/Currencies/Index.cshtml
+++ b/Wimym.Backend/Views/Currencies/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Wimym.Backend.Models.Currency>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Currencies Index";
 }
 
-<h1>Index</h1>
+ 
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New Currency</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CurrencyId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CurrencyId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CurrencyId">Delete</a>
+                <a class="btn btn-warning"  asp-action="Edit" asp-route-id="@item.CurrencyId">Edit</a> |
+                <a  class="btn btn-info" asp-action="Details" asp-route-id="@item.CurrencyId">Details</a> |
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.CurrencyId">Delete</a>
             </td>
         </tr>
 }
