--- a/Wimym.Backend/Views/Currencies/Index.cshtml
+++ b/Wimym.Backend/Views/Currencies/Index.cshtml
@@ -13,10 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Code)
+                <a asp-action="Index" asp-route-sort="@ViewData["CodeSortparam"]" >@Html.DisplayNameFor(model => model.Code)</a>  
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                <a asp-action="Index" asp-route-sort="@ViewData["NameSortparam"]">@Html.DisplayNameFor(model => model.Name)</a>
             </th>
             <th></th>
         </tr>
