--- a/Wimym.Backend/Views/Currencies/Index.cshtml
+++ b/Wimym.Backend/Views/Currencies/Index.cshtml
@@ -4,16 +4,26 @@
     ViewData["Title"] = "Currencies Index";
 }
 
- 
+
 
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New Currency</a>
 </p>
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Filter: <input type="text" name="searchFilter" value="@ViewData["CurrentFilter"]" />
+            <input type="submit" value="Search" class="btn btn-default" />
+            <a asp-action="Index"> All Currencies</a>
+        </p>
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                <a asp-action="Index" asp-route-sort="@ViewData["CodeSortparam"]" >@Html.DisplayNameFor(model => model.Code)</a>  
+                <a asp-action="Index" asp-route-sort="@ViewData["CodeSortparam"]">@Html.DisplayNameFor(model => model.Code)</a>
             </th>
             <th>
                 <a asp-action="Index" asp-route-sort="@ViewData["NameSortparam"]">@Html.DisplayNameFor(model => model.Name)</a>
@@ -22,20 +32,21 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Code)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a class="btn btn-warning"  asp-action="Edit" asp-route-id="@item.CurrencyId">Edit</a> |
-                <a  class="btn btn-info" asp-action="Details" asp-route-id="@item.CurrencyId">Details</a> |
-                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.CurrencyId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Code)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.CurrencyId">Edit</a> |
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.CurrencyId">Details</a> |
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.CurrencyId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
