--- a/Wimym.Backend/Views/Currencies/Index.cshtml
+++ b/Wimym.Backend/Views/Currencies/Index.cshtml
@@ -1,10 +1,8 @@
-﻿@model IEnumerable<Wimym.Backend.Models.Currency>
+﻿@model Pagination<Wimym.Backend.Models.Currency>
 
 @{
     ViewData["Title"] = "Currencies Index";
 }
-
-
 
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New Currency</a>
@@ -14,7 +12,7 @@
         <p>
             Filter: <input type="text" name="searchFilter" value="@ViewData["CurrentFilter"]" />
             <input type="submit" value="Search" class="btn btn-default" />
-            <a asp-action="Index"> All Currencies</a>
+            <a asp-action="Index"> All Currencies</a> | showed rows @Model.TotalR
         </p>
     </div>
 </form>
@@ -23,10 +21,18 @@
     <thead>
         <tr>
             <th>
-                <a asp-action="Index" asp-route-sort="@ViewData["CodeSortparam"]">@Html.DisplayNameFor(model => model.Code)</a>
+                <a asp-action="Index"
+                   asp-route-sort="@ViewData["CodeSortparam"]"
+                   asp-route-currentFilter="@ViewData["CurrentFilter"]">
+                    Code
+                </a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-sort="@ViewData["NameSortparam"]">@Html.DisplayNameFor(model => model.Name)</a>
+                <a asp-action="Index"
+                   asp-route-sort="@ViewData["NameSortparam"]"
+                   asp-route-currentFilter="@ViewData["CurrentFilter"]">
+                    Name
+                </a>
             </th>
             <th></th>
         </tr>
@@ -50,3 +56,31 @@
         }
     </tbody>
 </table>
+@{
+    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+<a asp-action="Index"
+   asp-route-sort="@ViewData["CurrentSort"]"
+   asp-route-page="@(Model.PageIndex-1)"
+   asp-route-currentFilter="@ViewData["currentFilter"]"
+   class="btn btn-default @prevDisabled">
+    Previous
+</a>
+@for (int i = 1; i <= Model.TotalPages; i++)
+{
+    <a asp-action="Index"
+       asp-route-sort="@ViewData["CurrentSort"]"
+       asp-route-page="@i"
+       asp-route-currentFilter="@ViewData["currentFilter"]"
+       class="btn btn-default @nextDisabled">
+        @i
+    </a>
+}
+<a asp-action="Index"
+   asp-route-sort="@ViewData["CurrentSort"]"
+   asp-route-page="@(Model.PageIndex+1)"
+   asp-route-currentFilter="@ViewData["currentFilter"]"
+   class="btn btn-default @nextDisabled">
+    Next
+</a>
