--- a/Wimym.Backend/Views/Users/Index.cshtml
+++ b/Wimym.Backend/Views/Users/Index.cshtml
@@ -27,25 +27,25 @@
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rol)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                <a class="btn btn-warning" data-toggle="modal" data-target="#editModal" onclick="getUser('@item.Id','Users/GetUsers')">Edit</a> |
-                <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Rol)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
+                <td>
+                    <a class="btn btn-warning" data-toggle="modal" data-target="#editModal" onclick="getUser('@item.Id','Users/GetUsers')">Edit</a> |
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
         }
     </tbody>
 </table>
@@ -57,7 +57,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button><h4 class="modal-title" id="myModalLabel">
-                  Edit User
+                    Edit User
                 </h4>
             </div>
             <div class="modal-body">
@@ -66,18 +66,23 @@
                     <input type="hidden" name="Id" id="Id" />
                     <div class="form-group">
                         <label for="UserName" class="control-label"> User Name</label>
-                        <input readonly name="UserName" id="UserName"  class="form-control" />                   
+                        <input readonly name="UserName" id="UserName" class="form-control" />
                     </div>
-                   
+                    <div class="form-group">
+                        <label for="Rols" class="control-label"> Rols</label>
+                        <select readonly name="Select" id="Select" class="form-control" onclick="getRols('Users/GetRols');">
+                            <option value="0"> Select a Rol</option>
+                        </select>
+                    </div>
                     <div class="form-group">
                         <label for="Email" class="control-label"> Email</label>
-                        <input name="Email" id="Email" class="form-control" /> 
-                    </div>                    
-                    
+                        <input name="Email" id="Email" class="form-control" />
+                    </div>
+
                     <div class="form-group">
                         <label for="PhoneNumber" class="control-label"> Tel</label>
-                        <input name="PhoneNumber" id="PhoneNumber" class="form-control" />                      
-                    </div>                 
+                        <input name="PhoneNumber" id="PhoneNumber" class="form-control" />
+                    </div>
                 </form>
             </div>
             <div class="modal-footer">
