--- a/Wimym.Backend/Views/Users/Index.cshtml
+++ b/Wimym.Backend/Views/Users/Index.cshtml
@@ -42,7 +42,7 @@
                 </td>
                 <td>
                     <a class="btn btn-warning" data-toggle="modal" data-target="#editModal" onclick="getUser('@item.Id','Users/GetUsers')">Edit</a> |
-                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a class="btn btn-info" data-toggle="modal" data-target="#detailModal" onclick="getUser('@item.Id','Users/GetUsers')">Details</a> |
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
@@ -88,6 +88,54 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary" onclick="editUser('Users/EditUser')">Save Changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="detailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button><h4 class="modal-title" id="myModalLabel">
+                    Details User
+                </h4>
+            </div>
+            <div class="modal-body">
+
+
+                <div class="form-group">
+                    <label for="UserName" class="control-label"> User Name</label>
+                    <p id="dUserName">
+                        User 1
+                    </p>
+                </div>
+                <div class="form-group">
+                    <label for="Rols" class="control-label"> Rols</label>
+                    <p id="dRol">
+                        Rol
+                    </p>
+                </div>
+                <div class="form-group">
+                    <label for="Email" class="control-label"> Email</label>
+                    <p id="dEmail">
+                        Email
+                    </p>
+                </div>
+
+                <div class="form-group">
+                    <label for="PhoneNumber" class="control-label"> Tel</label>
+                    <p id="dPhoneNumber">
+                        Phone
+                    </p>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success" data-target="#editModal" data-toggle="modal" onclick="hideUserDetail()">Edit</button>
             </div>
         </div>
     </div>
