--- a/Wimym.Backend/Views/Users/Index.cshtml
+++ b/Wimym.Backend/Views/Users/Index.cshtml
@@ -43,7 +43,7 @@
                 <td>
                     <a class="btn btn-warning" data-toggle="modal" data-target="#editModal" onclick="getUser('@item.Id','Users/GetUsers')">Edit</a> |
                     <a class="btn btn-info" data-toggle="modal" data-target="#detailModal" onclick="getUser('@item.Id','Users/GetUsers')">Details</a> |
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a class="btn btn-danger" data-toggle="modal" data-target="#deleteModal" onclick="getUser('@item.Id','Users/GetUsers')" >Delete</a>
                 </td>
             </tr>
         }
@@ -140,6 +140,33 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button><h4 class="modal-title" id="myModalLabel">
+                  Are you sure to delete this User?
+                </h4>
+            </div>
+            <div class="modal-body">
+
+
+               <h3 id="delUser">
+                   <input type="hidden" name="delUserId" id="delUserId" />
+               </h3>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger"  onclick="DeleteUser('Users/DeleteUser')">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 
