--- a/Wimym.Backend/Views/Users/Index.cshtml
+++ b/Wimym.Backend/Views/Users/Index.cshtml
@@ -167,6 +167,51 @@
     </div>
 </div>
 
+<div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button><h4 class="modal-title" id="myModalLabel">
+                    Add User
+                </h4>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="Rols" class="control-label"> Rols</label>
+                        <select readonly name="SelectNew" id="SelectNew" class="form-control" onclick="getRols('Users/GetRols');">
+                            <option value="0"> Select a Rol</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="EmailNew" class="control-label"> Email</label>
+                        <input name="EmailNew" id="EmailNew" class="form-control" />
+                    </div>
 
+                    <div class="form-group">
+                        <label for="PhoneNumberNew" class="control-label"> Tel</label>
+                        <input name="PhoneNumberNew" id="PhoneNumberNew" class="form-control" />
+                    </div>
+
+                    <div class="form-group">
+                        <label for="PasswordNew" class="control-label"> Password</label>
+                        <input type="password" name="PasswordNew" id="PasswordNew" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <p id="NewMessage">
+
+                        </p>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="createUser('Users/CreateUser')">Save Changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
