--- a/Wimym.Backend/Views/Users/Index.cshtml
+++ b/Wimym.Backend/Views/Users/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <h2>Users</h2>
 <p>
-    <!--<a asp-action="Create">Create New</a> -->
+    <a  class="btn btn-primary" data-toggle="modal" data-target="#addModal">Create New</a> 
 </p>
 <table class="table">
     <thead>
