--- a/Wimym.Backend/Views/Currencies/Index.cshtml
+++ b/Wimym.Backend/Views/Currencies/Index.cshtml
@@ -7,35 +7,118 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a data-toggle='modal' data-target='#modalAdd' class='btn btn-info'>
+        Add New Currency
+    </a>
+    @*<a asp-action="Create">Create New</a>*@
 </p>
+<div class="form-group">
+    <div class="col-md-6">
+        <input id="filter" name="filter" placeholder="Search" onKeyUp="filterData(1);" class="form-control" />
+    </div>
+</div>
 <table class="table">
     <thead>
         <tr>
+            <th>Code</th>
+            <th>Name</th>
+            <th>State</th>
+            <th>Options</th>
+        </tr>
+    </thead>
+    <tbody id="resultSearch"></tbody>
+</table>
+<div id="pagination">
+</div>
+@*<table class="table">
+        <thead>
+            <tr>
                 <th>
                     @Html.DisplayNameFor(model => model.Code)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Name)
                 </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Code)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.CurrencyId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CurrencyId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CurrencyId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Code)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.CurrencyId">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.CurrencyId">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.CurrencyId">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>*@
+
+<div class="modal fade" id="modalAdd" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title" id="myModalLabel">Add New Currency</h4>
+            </div>
+            <div class="modal-body">
+                <form asp-action="">
+                    <div class="form-horizontal">
+                        <div class="form-group">
+                            <label for="Code" class="col-md-2 control-label">Code</label>
+                            <div class="col-md-10">
+                                <input for="Code" id="Code" placeholder="Code" name="Code" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="Name" class="col-md-2 control-label">Name</label>
+                            <div class="col-md-10">
+                                <input for="Name" id="Name" placeholder="Name" name="Name" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="State" class="col-md-2 control-label">State</label>
+                            <div class="col-md-10">
+                                <select id='State' class="form-control">
+                                    <option value='0'>Select an Status</option>
+                                    <option value='true'>Active</option>
+                                    <option value='false'>Inactive</option>
+                                </select>
+                            </div>
+                        </div>
+                        <label id="messageTag" class="col-md-2 control-label"></label>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" onclick="addCurrency()" class="btn btn-primary">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="ModalState" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 id="titleCurrency" class="modal-title"></h4>
+            </div>
+            <div class="modal-body"></div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" onclick="editCurrency()" class="btn btn-primary">Accept</button>
+            </div>
+        </div><!--/.modal-content -->
+    </div><!--/.modal-dialog -->
+</div><!--/.modal -->
