another way to filter and pagination

--- a/Wimym.Backend/Views/Shared/_Layout.cshtml
+++ b/Wimym.Backend/Views/Shared/_Layout.cshtml
@@ -32,7 +32,12 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Origins" asp-action="Index">Origin</a></li>
+                    <li><a asp-area="" asp-controller="AccountTypes" asp-action="Index">AccountTypes</a></li>
+                    <li><a asp-area="" asp-controller="Wallets" asp-action="Index">Wallets</a></li>
+                    <li><a asp-area="" asp-controller="Accounts" asp-action="Index">Accounts</a></li>
+                    <li><a asp-area="" asp-controller="Origins" asp-action="Index">Origin</a></li>
+                    <li><a asp-area="" asp-controller="Origins" asp-action="Index">Origin</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
