--- a/Auth/Views/Account/Login.cshtml
+++ b/Auth/Views/Account/Login.cshtml
@@ -23,8 +23,8 @@
 
                             <fieldset>
                                 <div class="form-group">
-                                    <label asp-for="Username"></label>
-                                    <input class="form-control" placeholder="Username" asp-for="Username" autofocus>
+                                    <label asp-for="Username">Email</label>
+                                    <input class="form-control" placeholder="Email" asp-for="Username" autofocus>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="Password"></label>
@@ -40,8 +40,8 @@
                                     </div>
                                 }
                                 <div class="form-group">
-                                    <button class="btn btn-primary" name="button" value="login">Login</button>
-                                    <button class="btn btn-default" name="button" value="cancel">Cancel</button>
+                                    <button class="btn btn-primary" name="button" value="login">Ingresar</button>
+                                    <a class="btn btn-link" asp-action="register">o crear una nueva cuenta</a>
                                 </div>
                             </fieldset>
                         </form>
