--- a/Auth/Views/Account/Register.cshtml
+++ b/Auth/Views/Account/Register.cshtml
@@ -15,8 +15,12 @@
                     <form asp-route="Register">
                         <fieldset>
                             <div class="form-group">
-                                <label asp-for="Name"></label>
+                                <label asp-for="Name">Nombre</label>
                                 <input class="form-control" placeholder="Nombre" asp-for="Name" autofocus>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Lastname">Apellido</label>
+                                <input class="form-control" placeholder="Lastname" asp-for="Lastname">
                             </div>
                             <div class="form-group">
                                 <label asp-for="Email"></label>
