--- a/Wimym.Front/Views/Shared/_Layout.cshtml
+++ b/Wimym.Front/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Origin" asp-action="Index">Origin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Logout">LogOff</a>
+                        </li>
                     </ul>
                 </div>
             </div>
